# Invest-bot

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  BACKLOG.md  OPERATIONS.md  PLAN.md  PLAN_V2.md  README.md  pyproject.toml  strategy.md
.claude/: CLAUDE.md
.github/workflows/: test.yml
config/: watchlist.yaml
config/swarm/: daily_research.yaml  macro_sector_desk.yaml  new_entry_debate.yaml  position_review.yaml  quick_chat.yaml  shadow_review.yaml
skills/: README.md
skills/analysis/: catalyst-check.md  factor-research.md  fundamental-screen.md  multi-factor.md  sector-rotation.md  technical-trend.md  top-down-macro.md  valuation-model.md
skills/flow/: foreign-flow.md  liquidity-check.md
skills/playbooks/: cut-loser.md  new-entry.md
skills/risk/: correlation-check.md  drawdown-budget.md  position-sizing.md  (+2 more)
tests/: conftest.py  test_backtest_w4.py  test_bias_detectors.py  test_bias_weekly_check.py  test_export_pine_script.py  test_holidays.py  test_learning_stats.py  test_mcp_server.py  test_memory_compression.py  test_memory_events.py  test_memory_files.py  test_memory_patterns.py  test_memory_recall.py  test_memory_tokenizer.py  test_orchestrator_dag.py  test_orchestrator_nodes.py  test_orchestrator_preset_loader.py  test_orchestrator_types.py  test_queries.py  test_shadow_delta_pnl.py  test_shadow_e2e.py  test_shadow_pairing.py  test_shadow_parsers.py  test_shadow_rule_extract.py  test_simulator.py  test_skill_lifecycle.py  test_skill_loader.py  test_skill_stats_compute.py  test_telegram_format.py  test_validator.py
(+81 files in other folders)
